// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Item Prices renders correctly 1`] = `
.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  color: #222222;
}

.c4:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-bottom: 1rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c3 {
  font-size: 1.4rem;
  font-weight: 400;
  color: #222222;
  margin: 0;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c1 {
  font-size: 1.4rem;
  font-weight: 400;
  color: #222222;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #e0151d;
  font-weight: 700;
}

.c2 {
  display: inline-block;
  width: 6rem;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span
      className="c2"
    >
      Sale:
    </span>
     
    $11.00
  </p>
  <p
    className="c3"
  >
    <span
      className="c2"
    >
      Regular:
    </span>
     
    $21.00
  </p>
  <p
    className="c4"
    data-testid="total-price"
  >
    <span
      className="c2"
    >
      Total:
    </span>
     
    $22.00
  </p>
</div>
`;

exports[`COMPONENT - Item Prices renders correctly withregular price only without discount 1`] = `
.c3 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  color: #222222;
}

.c3:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-bottom: 1rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  font-size: 1.4rem;
  font-weight: 400;
  color: #222222;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: inline-block;
  width: 6rem;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    <span
      className="c2"
    >
      Regular:
    </span>
     
    $21.00
  </p>
  <p
    className="c3"
    data-testid="total-price"
  >
    <span
      className="c2"
    >
      Total:
    </span>
     
    $42.00
  </p>
</div>
`;
